# knowledge_injection

./: README.md
dataset_collection/api_scrape/: linux_install.sh  pyproject.toml
dataset_collection/api_scrape/docker/: Dockerfile
dataset_collection/api_scrape/src/api_scrape/data_collection/: common.py
dataset_collection/api_scrape/src/api_scrape/data_collection_prod/: accounts_pool_advanced.py  news_sender.py
dataset_collection/api_scrape/src/api_scrape/twscrape/: accounts_pool_simple.py  imap.py  login.py
dataset_collection/pages_processing/: README.md  pdf_pages.py  web_pages.py
dataset_collection/pages_processing/scraper_processor/services/: html2text.py  web_processor.py
dataset_colletion/api_scrape/src/api_scrape/data_collection/: tweets_dataset.py  tweets_draft.py
dataset_colletion/api_scrape/src/api_scrape/data_collection_prod/: exceptions.py  news_continuous_loader.py  twitter_requests.py
dataset_colletion/api_scrape/src/api_scrape/twscrape/: __init__.py  account.py  api.py  constants.py  db.py  logger.py  queue_client.py  (+1 more)
dataset_colletion/twscrape/: __init__.py  api.py  pyproject.toml
dataset_colletion/twscrape/src/twscrape/: accounts_pool_simple.py  api.py  cli.py  login.py  queue_client.py  utils.py
dataset_colletion/twscrape/test/: test_pars.py
dataset_colletion/twscrape/test/twscrape/: reply.py  test_pars.py
dataset_colletion/twscrape/twscrape/: __init__.py  accounts_pool.py  api.py  imap.py  queue_client.py  utils.py
evaluation/: README.md  prompt_templates.txt
evaluation/fin_qa/: fin_qa.yaml  utils.py
evaluation/financial_headlines/: financial_headlines.yaml  utils.py
evaluation/fpb/: fpb.yaml  utils.py
injection/finetuning/: README.md  local_finetuning.py  petals_finetuning.py
injection/rag/: README.md  embedding.py  local_rag.py  qdrant.py  qdrant_rag.py
