[build-system]
requires = ['setuptools>=61', 'setuptools_scm>=6.2']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['src']

[project]
version = '0.1.0'
name = 'twscrape'
description = 'A social networking service scraper'
readme = 'README.md'
authors = [{name = 'JustAnotherArchivist'}]
classifiers = [
	'Development Status :: 4 - Beta',
	'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
	'Programming Language :: Python :: 3.11',
]
dependencies = [
	'requests[socks]',
	'lxml',
	'beautifulsoup4',
	'pytz; python_version < "3.9.0"',
	'filelock',
	'selenium-wire',
	'fake-useragent',
	'aiosqlite',
	'loguru'
]
requires-python = '~=3.11'
